Fix flashing scrollbar on open. closes #43

--- a/src/tingle.css
+++ b/src/tingle.css
@@ -17,7 +17,7 @@
   visibility: hidden;
   flex-direction: column;
   align-items: center;
-  overflow-y: auto;
+  overflow: hidden;
   background: rgba(0, 0, 0, .8);
   opacity: 0;
   cursor: pointer;
@@ -136,6 +136,7 @@
 }
 
 .tingle-modal--overflow {
+  overflow-y: scroll;
   padding-top: 8vh;
 }
 
